--- a/front/src/app/component/chat.component.html
+++ b/front/src/app/component/chat.component.html
@@ -1,7 +1,12 @@
-<div class="chat-box">
-  <div *ngFor="let msg of messages">
-    {{ msg }}
+<div class="chat-container">
+  <h2>Chat</h2>
+  <div class="messages">
+    <div *ngFor="let msg of messages">
+      <p>{{ msg }}</p>
+    </div>
+  </div>
+  <div class="message-input">
+    <input [(ngModel)]="message" placeholder="Type a message" />
+    <button (click)="sendMessage()">Send</button>
   </div>
 </div>
-<input [(ngModel)]="message" placeholder="Tapez votre message" />
-<button (click)="sendMessage()">Envoyer</button>
