--- a/front/src/app/component/chat.component.html
+++ b/front/src/app/component/chat.component.html
@@ -1,12 +1,12 @@
 <div class="chat-container">
-  <h2>Chat</h2>
-  <div class="messages">
-    <div *ngFor="let msg of messages">
+  <h2>Messagerie</h2>
+  <div class="messages" #messageContainer>
+    <div *ngFor="let msg of messages" class="message">
       <p>{{ msg }}</p>
     </div>
   </div>
   <div class="message-input">
-    <input [(ngModel)]="message" placeholder="Type a message" />
-    <button (click)="sendMessage()">Send</button>
+    <input [(ngModel)]="message" placeholder="Ecrire message" />
+    <button (click)="sendMessage()">Envoyer</button>
   </div>
 </div>
