--- a/front/src/app/component/chat.component.html
+++ b/front/src/app/component/chat.component.html
@@ -1,12 +1,13 @@
 <div class="chat-container">
   <h2>Messagerie</h2>
   <div class="messages" #messageContainer>
-    <div *ngFor="let msg of messages" class="message">
-      <p>{{ msg }}</p>
+    <div *ngFor="let msg of messages" [ngClass]="{'client': msg.role === 'Client', 'service client': msg.role === 'Service client'}">
+      <strong>{{ msg.role }} ({{msg.sender}}):</strong>
+      <p>{{msg.content}}</p>
     </div>
   </div>
   <div class="message-input">
-    <input [(ngModel)]="message" placeholder="Ecrire message" />
+    <input [(ngModel)]="message" placeholder="Ecrire un message" />
     <button (click)="sendMessage()">Envoyer</button>
   </div>
 </div>
