--- a/front/src/app/component/chat.component.css
+++ b/front/src/app/component/chat.component.css
@@ -63,3 +63,17 @@ h1, h2 {
 .message-input button:hover {
   background-color: #0056b3;
 }
+
+.client {
+  background-color: #d1e7dd;
+  color: #0f5132;
+  align-self: flex-end;
+  border: 1px solid #badbcc;
+}
+
+.service-client {
+  background-color: #f8d7da;
+  color: #842029;
+  align-self: flex-start;
+  border: 1px solid #f5c2c7;
+}
